fix: Improve the row hover highlight in dark mode
Improve dashboard card colors.

--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -38,6 +38,10 @@
 
           td {
             font-weight: 700;
+
+            &[class*='bg-'] {
+              color: var(--table-footer-color);
+            }
           }
         }
       }
